Adicionado as migrations e conexao ao banco

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
-    "DefaultConection": "Host:localhost;Port=5432;Database=loja_teste;Username=postgres;password=root"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=loja_teste;Username=postgres;Password=root"
   }
 }
