--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=loja_teste;Username=postgres;Password=root"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:5178",
+    "ValidIssuer": "https://localhost:5178",
+    "Key": "NiCAOFkRifD+Z60Hf3gDo6y3un3HIznVeuilMoOg998="
   }
 }
