--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-JWT_KEY=NiCAOFkRifD+Z60Hf3gDo6y3un3HIznVeuilMoOg998
+JWT_KEY=Chave da api
 JWT_AUDIENCE=htpps://localhost:5178
 JWT_ISSUER=https://localhost:5178
